<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Toir-mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Настройки приложения</string>
    <string name="action_about">О программе</string>
    <string name="pleasePutTag">Поднесите метку</string>
    <string name="readTag">Считать</string>
    <string name="cancel">Отмена</string>
    <string name="action_update">Обновить приложение</string>
    <string name="pref_cat_main">Основные</string>
    <string name="pref_update_url">Сервер обновления</string>
    <string name="pref_update_url_dialog_title">Введите URL сервера обновления</string>
    <string name="pref_server_url">Сервер системы</string>
    <string name="pref_server_url_dialog_title">Введите URL сервера системы</string>
    <string name="pref_rfid_driver">Драйвер считывателя RFID</string>
    <string name="login">Войти</string>
    <string name="init_success">Инициализация успешна</string>
    <string name="init_fail">Инициализация неудачна</string>
    <string name="find_fail">Метка не найдена</string>
    <string name="read_fail">Чтение закончилось неудачей</string>
    <string name="write_15693_fail">Запись закончилась неудачей</string>
    <string name="write_15693_success">Запись успешна</string>
    <string name="init">Инициализировать</string>
    <string name="find">Найти</string>
    <string name="read_15693">Считать метку</string>
    <string name="write_15693">Записать метку</string>
    <string name="serverUrl">serverUrl</string>
    <string name="updateUrl">updateUrl</string>
    <string name="rfidDriverListPrefKey">rfidDriverListPrefKey</string>
    <string name="rfidDriverBluetoothClass">RfidDriverBluetooth</string>
    <string name="rfidDriverNullClass">rfidDriverNull</string>
    <string name="rfidDriverTextClass">RfidDriverText</string>
    <string name="rfidDriverBarcodeClass">RfidDriverBarcode</string>
    <string name="rfidDriverQRcodeClass">RfidDriverQRcode</string>
    <string name="rfidDriverBarcode2DClass">RfidDriverBarcode2D</string>
    <string name="rfidDriverC5Class">RfidDriverC5</string>
    <string name="rfidDrvSettingKey">rfidDrvSettingKey</string>
    <string name="rfidDrvBluetoothServer">rfidDrvBluetoothServer</string>
    <string name="references">Справочники</string>
    <string name="get_task">Получить наряд</string>
    <string name="back">Назад</string>
    <string name="make_photo">Снять</string>
    <string name="image_description">изображение</string>
    <string name="description">описание</string>
    <string name="id">ID</string>
    <string name="whois">Должность</string>
    <string name="current_location">Текущие координаты:</string>
    <string name="no_gps_data">Нет данных GPS</string>
    <string name="current_status">Текущий статус</string>
    <string name="gpsstatus">Состояние GPS</string>
    <string name="gprsstatus">Связь GPRS</string>
    <string name="server_date_connect">Дата связи с сервером:</string>
    <string name="tasks_quantity">Статистика нарядов:</string>
    <string name="boss_contact">Контакт начальника:</string>
    <string name="type">Тип:</string>
    <string name="critical">Критичность:</string>
    <string name="last_date">Дата обслуживания:</string>
    <string name="last_result">Результат обслуживания:</string>
    <string name="documentation">Документация:</string>
    <string name="pleaseScanImg">Наведите камеру на код</string>
    <string name="scan_process">Процесс сканирования</string>
    <string name="empty"></string>
    <string name="created">Создан: </string>
    <string name="status">Статус: </string>
    <string name="closed">Закрыт: </string>
    <string name="operation_status_title">Статус операции</string>
    <string name="equipment_title">Оборудование:</string>
    <string name="operation_title">Операция:</string>
    <string name="status_title">Статус: </string>
    <string name="result_title">Результат: </string>
    <string name="step_image_descr">Изображение шага операции</string>
    <string name="task_title">Наряд: </string>
    <string name="operation_step_title">Шаг:</string>
    <string name="operation_step_descr_title">Описание шага обслуживания</string>
    <string name="operation_status_change_title">Изменить статус операции</string>
    <string name="divider"> | </string>
    <string name="application_full_name">Мобильный ТОиР</string>
    <string name="open_documentation">Открыть документацию</string>
    <string name="title_activity_btserver">BTServerActivity</string>

</resources>