<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                        
                        <ImageView
                            android:id="@+id/equipment_image"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/image_description"
                            android:src="@drawable/workman" />

                        <ListView
                            android:id="@+id/equipment_listView_main"
                            android:layout_width="match_parent"
                            android:layout_height="135dp"
                            android:maxHeight="35dp"
                            android:background="@color/black" >

        				</ListView>                        
                    </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:baselineAligned="false" >

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:background="@color/black" >

                    <TableRow
                        android:id="@+id/equipment_TableRow07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:gravity="top" >

                    </TableRow>

                    <TableRow
                        android:id="@+id/equipment_TableRow06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="@color/black"
                        android:gravity="top" >

                        <TextView
                            android:id="@+id/equipment_text_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:textSize="12sp" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/equipment_TableRow05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:gravity="top" >

                        <TextView
                            android:id="@+id/equipment_text_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:text="@string/type"
                            android:textAllCaps="false"
                            android:textSize="12sp" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/equipment_tableRow9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black" >
                    </TableRow>


                    <TableRow
                        android:id="@+id/equipment_tableRow10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black" >

                        <TextView
                            android:id="@+id/equipment_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:ems="10"
                            android:text="@string/current_status"
                            android:textAllCaps="false"
                            android:textSize="12sp" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/equipment_tableRow6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/equipment_critical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/critical"
                            android:textSize="12sp" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/equipment_tableRow15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/button_read"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minHeight="32dp"
                            android:text="@string/read_15693"
                            android:textColor="@color/lightgray"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:typeface="normal" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/equipment_tableRow5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                        
                        <Button
                            android:id="@+id/button_write"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minHeight="32dp"
                            android:text="@string/write_15693"
                            android:textColor="@color/lightgray"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:typeface="normal" />
                        
                    </TableRow>
                    
                </TableLayout>

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TableRow
                        android:id="@+id/equipment_tablerow13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/equipment_text_position"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/black"
                            android:text="@string/current_location"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/equipment_position"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:text="@string/no_gps_data"
                            android:textSize="12sp" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/equipment_TableRow08"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/equipment_text_date_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_date" />

                        <TextView
                            android:id="@+id/equipment_text_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </TableRow>

                    <TableRow
                        android:id="@+id/equipment_TableRow04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/equipment_text_tasks_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_result" />

                        <TextView
                            android:id="@+id/equipment_text_tasks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/equipment_tablerow11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/equipment_text_documentation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/documentation" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/equipment_TableRow02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <Spinner
                            android:id="@+id/equipment_spinner_operations"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

    </TableLayout>
